// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtherLoanAmountField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="otherLoanAmountField"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych"
          type="text"
          value="test"
        />
        <span
          class="sc-fnVYJo hhRySP"
        >
          PLN
        </span>
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        Podany kwota jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot 1`] = `
<input
  class="sc-crzoUp kUQhja"
  id="otherLoanAmountField"
  name="name"
  placeholder="Kwota obecnych zobowiązań finansowych"
  type="text"
  value=""
/>
`;

exports[`<OtherLoanAmountField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="otherLoanAmountField"
          label="Test"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych*"
          required=""
          type="text"
          value=""
        />
        <span
          class="sc-fnVYJo hhRySP"
        >
          PLN
        </span>
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp kUQhja"
          id="otherLoanAmountField"
          label="Test"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych"
          type="text"
          value=""
        />
        <span
          class="sc-fnVYJo hhRySP"
        >
          PLN
        </span>
      </div>
    </div>
  </form>
</div>
`;
